<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"  
        android:layout_weight="10"     
    >
        <FrameLayout
            android:id="@+id/home_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffffff"
        />
    </LinearLayout>
  
   	<RadioGroup
   	    android:id="@+id/navigation_bar"
   		android:layout_width="match_parent"
   		android:layout_height="0dp"
   		android:layout_weight="1"  
   		android:orientation="horizontal"  
   	>
   	    <RadioButton 
   	        android:id="@+id/nav_stock_pool"
   	        android:layout_width="match_parent"
   	        android:layout_height="match_parent"
   	        android:layout_weight="1"
   	        android:button="@null"
   	        android:gravity="center"
   	        android:text="@string/nav_stock_pool"
   	        android:textSize="18sp"
   	        android:textColor="@color/color_radiobutton"
   	        android:textStyle="bold"
   	        />
   	    <View
	        android:layout_width="1dp"
	        android:layout_height="match_parent"
	        android:background="@drawable/nav_delimiter" 
	    />
   	    <RadioButton 
   	        android:id="@+id/nav_realtime"
   	        android:layout_width="match_parent"
   	        android:layout_height="match_parent"
   	        android:layout_weight="1"
   	        android:button="@null"
   	        android:gravity="center"
   	        android:text="@string/nav_realtime"
   	        android:textSize="18sp"
   	        android:textColor="@color/color_radiobutton"
   	        android:textStyle="bold"
   	        />
   	    <View
	        android:layout_width="1dp"
	        android:layout_height="match_parent"
	        android:background="@drawable/nav_delimiter" 
	    />
   	    <RadioButton 
   	        android:id="@+id/nav_stock_own"
   	        android:layout_width="match_parent"
   	        android:layout_height="match_parent"
   	        android:layout_weight="1"
   	     	android:button="@null"
   	        android:gravity="center"
   	        android:text="@string/nav_stock_own"
   	        android:textSize="18sp"
   	        android:textColor="@color/color_radiobutton"
   	        android:textStyle="bold"
   	        />
   	    <View
	        android:layout_width="1dp"
	        android:layout_height="match_parent"
	        android:background="@drawable/nav_delimiter" 
	    />
   	    <RadioButton 
   	        android:id="@+id/nav_user_center"
   	        android:layout_width="match_parent"
   	        android:layout_height="match_parent"
   	        android:layout_weight="1"
   	        android:button="@null"
   	        android:gravity="center"
   	        android:text="@string/nav_user_center"
   	        android:textSize="18sp"
   	        android:textColor="@color/color_radiobutton"
   	        android:textStyle="bold"
   	        />
   	</RadioGroup>    
</LinearLayout>